Unit Test POC and ReadMe

--- a/php.ini
+++ b/php.ini
@@ -458,7 +458,7 @@ default_mimetype = "text/html"
 ;include_path = ".:/php/includes"
 ;
 ; Windows: "\path1;\path2"
-include_path = ".;C:\Program Files (x86)\Jcx.Software\VS.Php\2012\php 5.2\pear;C:\Program Files (x86)\Jcx.Software\VS.Php\2012\"
+include_path = ".;C:\Program Files\Jcx.Software\VS.Php\2012\php 5.2\pear;C:\Program Files\Jcx.Software\VS.Php\2012\"
 
 ; The root of the PHP pages, used only if nonempty.
 ; if PHP was not compiled with FORCE_REDIRECT, you SHOULD set doc_root
@@ -472,7 +472,7 @@ doc_root =
 user_dir =
 
 ; Directory in which the loadable extensions (modules) reside.
-extension_dir = "C:\Program Files (x86)\Jcx.Software\VS.Php\2012\php 5.2\ext"
+extension_dir = "C:\Program Files\Jcx.Software\VS.Php\2012\php 5.2\ext"
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
@@ -628,7 +628,7 @@ extension=php_xmlrpc.dll
 extension=php_xsl.dll
 extension=php_zip.dll
 extension=php_sqlsrv_ts.dll
-zend_extension_ts="C:\Program Files (x86)\Jcx.Software\VS.Php\2012\php 5.2\ext\php_xdebug.dll"
+zend_extension_ts="C:\Program Files\Jcx.Software\VS.Php\2012\php 5.2\ext\php_xdebug.dll"
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
